--- a/frontend/src/app/my-info/my-info.component.html
+++ b/frontend/src/app/my-info/my-info.component.html
@@ -50,11 +50,11 @@
                     </div>
 
                 </form>
-                
+
                 <div class="cochu">
                     <button class="btn save">SAVE</button>
-                    <span class="cacban" data-toggle="collapse" data-target="#collapse-password" aria-expanded="false"
-                        aria-controls="collapse-password">CHANGE PASSWORD ></span>
+                    <span class="cacban" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
+                        aria-controls="collapseExample">CHANGE PASSWORD ></span>
                 </div>
 
                 <div class="container-fluid" (ngOnInit)="ngOnInit()">
