--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -51,9 +51,11 @@ input[type=search]::-webkit-search-cancel-button {
     background-size: 20px;
     margin-bottom: 3px;
 }
-  
+
+    
 ul.breadcrumb {
     background: white;
+    padding-left: 30px;
   }
 
 ul.breadcrumb li {
