--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -156,6 +156,7 @@ top: 0px;
     background: white;
     box-shadow: inset 0 0 0 2px var(--den);
     top: 9px;
+    left:3px;
     transition: 0.2s;
     transform: rotate(45deg);
     z-index: -1;
@@ -478,3 +479,79 @@ input:focus {
 }
 
 }
+
+
+
+
+
+
+
+
+
+
+
+/* KHU VỰC ĐANG THI CÔNG */
+/* đang làm toggle bằng radio cho thanh search khi thu nhỏ màn hình */
+
+.tiny-search {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-family: 'Noto Sans', sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .tiny-search input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 22px;
+    width: 22px;
+    border-radius: 20px;
+    background: transparent;
+    border: 2px solid #242424;
+  }
+
+  .tiny-search:hover input ~ .checkmark {
+    border: 2px solid yellowgreen;
+  }
+
+  .tiny-search input:checked ~ .checkmark {
+    background-color: yellowgreen;
+    border: yellowgreen ;
+  }
+  
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  .tiny-search input:checked ~ .checkmark:after {
+    display: block;
+  }
+
+  .tiny-search .checkmark:after {
+    left: 8px;
+    top: 5px;
+    width: 6px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
