--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -10,8 +10,15 @@
   </div>
 
   <div class="col">
+<!--
+    <div class="container haha" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      . </div>-->
 
-    <div class="container haha" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">. </div>
+      <div class="tiny-search" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <input type="checkbox">
+                        <span class="checkmark"></span>
+      </div>
+  
 
     <div class="container cuc" id="big">
       <input type="search" class="search" placeholder="Search">
@@ -44,7 +51,7 @@
             <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
             <li class="dropdown">
               <a class="drod-togg" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="firstname" *ngIf="anonymousUser"> tat hover di C, sau khi click ms chay anima tion ừa C cũng tính vậy nhưng ko biết làm :v L sửa chỗ đó nhen
+                <span class="firstname" *ngIf="anonymousUser">
                   <!-- chỗ này để hiện nè --> Firstname </span> <div class="user-icon"></div></a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                 <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
