--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -2,7 +2,6 @@
     font-size: 20px;
 }
 
-
 .shopping-cart{
     width: 22px;
     height: 23px;
@@ -155,7 +154,7 @@ top: 0px;
     border-radius: 100px;
     background: white;
     box-shadow: inset 0 0 0 2px var(--den);
-    top: 9px;
+top: 9px;
     left:3px;
     transition: 0.2s;
     transform: rotate(45deg);
@@ -194,19 +193,6 @@ top: 0px;
     transition: 0.2s;
     right: 0;
 }
-
-/*
-.cuc:after {
-    position: absolute;
-    font-family: "Font Awesome 5 Free";
-    content: "\f002";
-    font-size: 18px;
-    font-weight: 900;
-    z-index: -1;
-    left: 14px;
-    transition: 0.2s;
-}
-*/
 
 .dropdo:focus {
     background: #ffe033;
@@ -255,6 +241,7 @@ top: 0px;
     border: 2px solid var(--den);
     border-bottom: none;
     position: relative;
+    background: transparent;
     margin-top: 11px;
    }
    
