--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -1,23 +1,21 @@
 <div class="navbar navbar-expand-lg">
 
 <div class="row">
+
   <div class="column">
     <a class="navbar-brand" routerLink="/">
       <logo routerLink="/"></logo>
     </a>
-
-
   </div>
 
   <div class="col">
-<!--
     <div class="container haha" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-      . </div>-->
+      . </div>
 
-      <div class="tiny-search" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    <!-- <div class="tiny-search" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
         <input type="checkbox">
                         <span class="checkmark"></span>
-      </div>
+      </div>--> 
   
 
     <div class="container cuc" id="big">
@@ -26,47 +24,32 @@
 
     <div [ngSwitch]="loading" >
       <div *ngSwitchCase="false">
-        <div>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/login" style="margin-left: -10px;">Login</a>
-            </li>
-
-          </ul>
-        </div>
-        </div>
+<a class="nav-link" routerLink="/login" style="margin-left: -10px;">Login</a>
       </div>
 
 
       <!-- Phần code này Vy làm mới lại nè, bỏ my info ra ngoài luôn nhưng mà hình như ko có hiện tên user khi dăng nhập ukm đúng r ko hiện-->
       <div *ngSwitchCase="true">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <ul class="navbar-nav">
-            <li class="nav-item">
               <a class="nav-link" routerLink="/my/info/{{user._id}}" style="margin-left: -10px;">My Info</a>
-            </li>
+       
 
             <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
-            <li class="dropdown">
+   
               <a class="drod-togg" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="firstname" *ngIf="anonymousUser">
-                  <!-- chỗ này để hiện nè --> Firstname </span> <div class="user-icon"></div></a>
+                  <!-- chỗ này để hiện nè --> Firstname </span> 
+                <div class="user-icon"></div>
+              </a>
+
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                 <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-                <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-                <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
                 <a class="dropdown-item logout" (click)="logout()" >Log Out</a>
               </div>
-            </li>
 
-          </ul>
         </div>
       </div>
-    </div>
 
-    <div>
       <a class="nav-link cucu" routerLink="/shopping-cart">
         <div class="cart">
           <button class="shopping-cart">
@@ -75,12 +58,14 @@
           </button>
         </div>
       </a>
-    </div>
+
+    
   </div>
-</div>
+
+
   <div class="collapse" id="collapseExample">
     <input type="search" class="search" placeholder="Search">
   </div>
 
-
 </div>
+
