--- a/frontend/src/app/my-info/my-info.component.html
+++ b/frontend/src/app/my-info/my-info.component.html
@@ -1,144 +1,92 @@
-<div class="container-fluid">
-    <div class="row no-gutters">
-        <div class="user-nav" id="user-nav">
-
+<div class="container-fluid" (ngOnInit) = "ngOnInit()">
+    <div class="row">
+        <div class="col col-2">
+            <div class="headline">
+                <div class="ava">
+                    <i class=" far fa-user-circle fa-4x"></i>
+                </div>
+                <div class="ten">
+                    <p style="font-size: 13px; font-weight: 600;">ACCOUNT OF</p>
+                    <p id="name">{{user.name}}</p>
+                </div>
+            </div>
             <ul class="list-group">
-                <li class="headline">
-                    <div class="ava">
-                        <img src="https://i.imgur.com/YgDOOTW.png" alt="" class="img">
-                    </div>
-                    <div class="ten">
-                        <p style="font-size: 13px; font-weight: 600;">ACCOUNT OF</p>
-                        <p id=name>Be Sa </p>
-                    </div>
-                </li>
-
-                <li class="list-group-item" routerLink="/my/orders"> <span class="far fa-clone"></span>My Orders
-                </li>
-                <li class="list-group-item" routerLink="/my/info"> <span class="far fa-user"></span>My Info </li>
+                <li class="list-group-item" routerLink="/my/orders"> <span class="fas fa-box"></span>My Orders</li>
+                <li class="list-group-item" routerLink="/my/info/{{user._id}}}"> <span
+                        class="fas fa-user-edit"></span>My Info </li>
             </ul>
-
         </div>
-        <div class="col col-dac-biet">
-            <div class="col s">
-                <h4 class="sa">MY INFO</h4>
-                <form [formGroup]="form1">
+        <div class="col col-5 s" >
+            <h3 class="sa">MY INFO</h3>
+            <form [formGroup]="ChangeInfoForm">
+                <div class="form-group">
+                    <label>Full Name</label>
+                    <input formControlName="name" type="name" class="form-control" value={{user.name}}>
 
-                    <div class="form-group">
-                        <label>Full Name</label>
-                        <input formControlName="name" type="name" class="form-control" value="Be Sa">
 
-                    </div>
-
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input formControlName="email" type="email" class="form-control"
-                            value="sachaocochudicon@gmail.com" readonly>
-
-                    </div>
-
-                    <div class="form-group">
-                        <label>Phone Number</label>
-                        <input formControlName="phone" type="tel" class="form-control" value="0919954179">
-
-                    </div>
-
-                    <div class="form-group">
-                        <label>Address</label>
-                        <input formControlName="address" type="text" class="form-control" value="ở đâu á">
-
-                    </div>
-
-                </form>
-
-                <div class="cochu">
-                    <button class="btn save">SAVE</button>
-                    <span class="cacban" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
-                        aria-controls="collapseExample">CHANGE PASSWORD ></span>
                 </div>
 
-                <div class="container-fluid" (ngOnInit)="ngOnInit()">
-                    <div class="row">
-                        <div class="col col-2">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input formControlName="mail" type="email" class="form-control" value={{user.email}}>
 
-                            <div class="headline">
-                                <div class="ava">
-                                    <i class=" far fa-user-circle fa-4x"></i>
-                                </div>
-                                <div class="ten">
-                                    <p style="font-size: 13px; font-weight: 600;">ACCOUNT OF</p>
-                                    <p id="name">{{user.name}}</p>
-                                </div>
-                            </div>
+                </div>
 
-                            <div class="col s collapse" id="collapse-password">
-                                <h4 class="sa">Change Password</h4>
-                                <p class="sa" style="font-size: 20px; margin-bottom: 0px; margin-top: -25px;">___</p>
-                                <form [formGroup]="form">
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="tel" class="form-control" value={{user.phone}}>
 
-                                    <!-- </div> -->
+                </div>
 
-                                    <div class="form-group">
-                                        <label>Email</label>
-                                        <input formControlName="mail" type="email" class="form-control"
-                                            value={{user.email}}>
+                <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" class="form-control" value="ở đâu á">
 
-                                    </div>
+                </div>
+            </form>
+            <div class="cochu">
+                <button (click)="changeinfo()" class="btn save">SAVE</button>
+                <span class="cacban" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
+                    aria-controls="collapseExample">CHANGE PASSWORD ></span>
+            </div>
 
-                                    <div class="form-group">
-                                        <label>Phone Number</label>
-                                        <input type="tel" class="form-control" value={{user.phone}}>
+        </div>
+        <div class="col col-5 s collapse" id="collapseExample">
+            <h4 class="sa">Change Password</h4>
+            <p class="sa" style="font-size: 20px; margin-bottom: 0px; margin-top: -25px;">___</p>
+            <form [formGroup]="ChangePasswordForm">
 
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label>Address</label>
-                                        <input type="text" class="form-control" value="ở đâu á">
-
-                                    </div>
-                                </form>
-
-                                <div class="cochu">
-                                    <button (click)="changeinfo()" class="btn save">SAVE</button>
-                                    <span class="cacban" data-toggle="collapse" data-target="#collapseExample"
-                                        aria-expanded="false" aria-controls="collapseExample">CHANGE PASSWORD ></span>
-                                </div>
-
-                            </div>
-                            <div class="col col-5 s collapse" id="collapseExample">
-                                <h4 class="sa">Change Password</h4>
-                                <p class="sa" style="font-size: 20px; margin-bottom: 0px; margin-top: -25px;">___</p>
-                                <form [formGroup]="ChangePasswordForm">
-
-                                    <div class="form-group">
-                                        <label>Current Password</label>
-                                        <input formControlName="oldPassword" type="password" class="form-control"
-                                            [ngClass]="{ 'is-invalid': submitted && f.oldPassword.errors }">
-                                        <div *ngIf="submitted && f.oldPassword.errors" class="alert alert-danger">
-                                            <div *ngIf="f.oldPassword.errors.required"> Cannot be empty</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label>New Password</label>
-                                        <input formControlName="password1" type="password" class="form-control"
-                                            [ngClass]="{ 'is-invalid': submitted && f.password1.errors }">
-                                        <div *ngIf="submitted && f.password1.errors" class="alert alert-danger">
-                                            <div *ngIf="f.password1.errors.required"> Cannot be empty</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label>Confirm password</label>
-                                        <input formControlName="password2" type="password" class="form-control"
-                                            [ngClass]="{ 'is-invalid': submitted && f.password2.errors }">
-                                        <div *ngIf="submitted && f.password2.errors" class="alert alert-danger">
-                                            <div *ngIf="f.password2.errors.required"> Cannot be empty</div>
-                                        </div>
-                                    </div>
-
-                                </form>
-                                <button (click)="changepass()" class="btn">CONFIRM</button>
-                            </div>
-                        </div>
+                <div class="form-group">
+                    <label>Current Password</label>
+                    <input formControlName="oldPassword" type="password" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.oldPassword.errors }">
+                    <div *ngIf="submitted && f.oldPassword.errors" class="alert alert-danger">
+                        <div *ngIf="f.oldPassword.errors.required"> Cannot be empty</div>
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <label>New Password</label>
+                    <input formControlName="password1" type="password" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.password1.errors }">
+                    <div *ngIf="submitted && f.password1.errors" class="alert alert-danger">
+                        <div *ngIf="f.password1.errors.required"> Cannot be empty</div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Confirm password</label>
+                    <input formControlName="password2" type="password" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.password2.errors }">
+                    <div *ngIf="submitted && f.password2.errors" class="alert alert-danger">
+                        <div *ngIf="f.password2.errors.required"> Cannot be empty</div>
+                    </div>
+                </div>
+
+            </form>
+            <button (click)="changepass()" class="btn">CONFIRM</button>
+        </div>
+    </div>
+
+
+</div>
