--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -5,7 +5,6 @@
         Shopping Cart
       </div>
     </div>
-<<<<<<< HEAD
     <div class="col cart-col">
       <div class="detail">
         <!-- <button class="btn btn-sm">Clear all items</button>-->
@@ -17,22 +16,19 @@
     </div>
     <div class="col">
       <div class="detail">
-=======
 
 
     <div class="col cart-col">
       <div class="detail">
     <!-- <button class="btn btn-sm">Clear all items</button>--> 
-  <p class="item-in-cart"> You have 1 item(s) in your cart</p>
+  <!-- <p class="item-in-cart"> You have 1 item(s) in your cart</p> -->
  
->>>>>>> d6963cdb5aba63b3aac833fc14c7e38bfe2dadd3
 
 
         <!--show list item trong gio hang-->
         <ul>
           <li>
             <div class="container item">
-<<<<<<< HEAD
               <div class="row" (ngOnInit)="ngOnInit()" *ngFor="let p of products">
 
                 <img class="img-container" src={{p.imgurl}} alt="">
@@ -48,38 +44,28 @@
 
                 </div>
 
-=======
 
-              <div class="row">
-
+              <!-- <div class="row"> -->
                 <!--thumbnail sản phẩm-->
-                <img class="img-container" src="https://img.pokemondb.net/sprites/black-white/normal/venusaur.png"
-                  alt="">
-
-                <div class="col">
-                  
+                <!-- <img class="img-container" src="https://img.pokemondb.net/sprites/black-white/normal/venusaur.png" alt=""> -->
+                <!-- <div class="col"> -->
                   <!-- tên và giá -->
-                  <div class="name-price">
-                    <p class="pro-name" routerLink="/product-detail"> Bulbasaur</p>
-                    <p class="pro-price">$5.00</p>
-                  </div>
+                  <!-- <div class="name-price"> -->
+                    <!-- <p class="pro-name" routerLink="/product-detail"> Bulbasaur</p> -->
+                    <!-- <p class="pro-price">$5.00</p> -->
+                  <!-- </div> -->
                   <!-- số lượng -->
-                  <div class="quantity" style="width: 100px;">
-                    <product-quantity></product-quantity>
-                  </div>
+                  <!-- <div class="quantity" style="width: 100px;"> -->
+                    <!-- <!-- <product-quantity></product-quantity> --> -->
+                  <!-- </div> -->
+                <!-- </div> -->
 
-                </div>
-
->>>>>>> d6963cdb5aba63b3aac833fc14c7e38bfe2dadd3
                 <div class="col del-sub">
                   <button class="del-btn"></button>
                   <p class="sub-total">$5.00</p>
 
                 </div>
-<<<<<<< HEAD
-=======
 
->>>>>>> d6963cdb5aba63b3aac833fc14c7e38bfe2dadd3
               </div>
             </div>
           </li>
