--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -1,66 +1,65 @@
 <div class="navbar navbar-expand-lg">
 
-<div class="row">
-
-  <div class="column">
-    <a class="navbar-brand" routerLink="/">
-      <logo routerLink="/"></logo>
-    </a>
+  <div class="row">
+  
+    <div class="column">
+      <a class="navbar-brand" routerLink="/">
+        <logo routerLink="/"></logo>
+      </a>
+    </div>
+  
+    <div class="col">
+      <div class="container haha" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        . </div>
+  
+     <div class="tiny-search" id="small" >
+          <input type="checkbox">
+      <span class="checkmark"></span>
+        </div>
+  
+      <div class="container cuc" id="big">
+        <input type="search" class="search" placeholder="Search">
+      </div>
+  
+      <div [ngSwitch]="loading" >
+        <div *ngSwitchCase="false">
+  <a class="nav-link" routerLink="/login" style="margin-left: -10px;">Login</a>
+        </div>
+  
+  
+        <!-- Phần code này Vy làm mới lại nè, bỏ my info ra ngoài luôn nhưng mà hình như ko có hiện tên user khi dăng nhập ukm đúng r ko hiện-->
+        <div *ngSwitchCase="true">
+  
+                <a class="nav-link drod-togg" routerLink="/my/info/{{user._id}}" class="drod-togg" id="dropdown01" 
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <div class="user-icon"></div>
+                </a>
+  
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+                  <a class="dropdown-item"routerLink="/my/info/{{user._id}}">My Info</a>
+                  <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
+                  <a class="dropdown-item logout" (click)="logout()" >Log Out</a>
+                </div>
+  
+          </div>
+        </div>
+  
+        <a class="nav-link cucu" routerLink="/shopping-cart">
+          <div class="cart">
+            <button class="shopping-cart">
+              <span class="cart-status">0</span>
+              <span class="cart-status-2">0</span>
+            </button>
+          </div>
+        </a>
+  
+      
+    </div>
   </div>
-
-  <div class="col">
-    <div class="container haha" id="small" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-      . </div>
-
-    <div class="container cuc" id="big">
+  
+    <!-- ô search hiện ra khi nhấn zô nút search ở màn hình nhỏ -->
+    <div class="collapse" id="collapseExample">
       <input type="search" class="search" placeholder="Search">
     </div>
-
-    <div [ngSwitch]="loading" >
-      <div *ngSwitchCase="false">
-<a class="nav-link" routerLink="/login" style="margin-left: -10px;">Login</a>
-      </div>
-
-
-      <!-- Phần code này Vy làm mới lại nè, bỏ my info ra ngoài luôn nhưng mà hình như ko có hiện tên user khi dăng nhập ukm đúng r ko hiện-->
-      <div *ngSwitchCase="true">
-
-              <a class="nav-link" routerLink="/my/info/{{user._id}}" style="margin-left: -10px;">My Info</a>
-       
-
-            <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
-   
-              <a class="drod-togg" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="firstname" *ngIf="anonymousUser">
-                  <!-- chỗ này để hiện nè --> Firstname </span> 
-                <div class="user-icon"></div>
-              </a>
-
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-                <a class="dropdown-item logout" (click)="logout()" >Log Out</a>
-              </div>
-
-        </div>
-      </div>
-
-      <a class="nav-link cucu" routerLink="/shopping-cart">
-        <div class="cart">
-          <button class="shopping-cart">
-            <span class="cart-status">0</span>
-            <span class="cart-status-2">0</span>
-          </button>
-        </div>
-      </a>
-
-    
+  
   </div>
-</div>
-
-  <!-- ô search hiện ra khi nhấn zô nút search ở màn hình nhỏ -->
-  <div class="collapse" id="collapseExample">
-    <input type="search" class="search" placeholder="Search">
-  </div>
-
-</div>
-
