--- a/frontend/src/app/signup/signup.component.css
+++ b/frontend/src/app/signup/signup.component.css
@@ -1,133 +1,145 @@
 section {
-    padding-top: 20px;
-   margin-top: 20px;
+   padding-top: 20px;
+  margin-top: 20px;
 }
 
 .alert {
-   text-align: right;
-   height: 30px;
-   border: none;
-   background: transparent;
-   border-radius: 0;
-   padding-top: 5px;
-   padding-right: 5px;
-   font-weight: 600;
+  text-align: right;
+  height: 30px;
+  border: none;
+  background: transparent;
+  border-radius: 0;
+  padding-top: 5px;
+  padding-right: 5px;
+  font-weight: 600;
 }
 
 
 .alert-danger {
-   color: #d93a3a;
-   border-top: 3px solid #d93a3a;
+  color: #d93a3a;
+  border-top: 3px solid #d93a3a;
 }
 
 .alert-success {
-   color: yellowgreen;
-   border-top: 3px solid yellowgreen;
+  color: yellowgreen;
+  border-top: 3px solid yellowgreen;
 }
 
 .login-form {
-   width:500px;
-   height: 700px;
-   background: transparent;
-   padding: 20px;
-   padding-top: 0;
-   margin: 0 auto;
+  width:500px;
+  height: 700px;
+  background: transparent;
+  padding: 20px;
+  padding-top: 0;
+  margin: 0 auto;
 }
 
-
-
 @media (max-width:500px) {
-   .login-form {
-       width:470px;
+  .login-form {
+      width:470px;
 
-   }
+  }
 }
 
 .name {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
 }
 
 ::placeholder {
-   font-weight: 500;
-   color: #999999;
-   font-size: 17px;
+  font-weight: 500;
+  color: #999999;
+  font-size: 17px;
 }
 
 
 input {
-   height: 55px;
-   border: 1px solid #f0f0f0;
-   border-radius: 2px;
-   background: #f0f0f0;
-   outline: none;
-   font-weight: 600;
-   font-size: 18px;
-   }
-   
-   input:focus{
-       box-shadow: none;
-       background: transparent;
-       border: 1px solid rgb(209, 209, 209);
-   }
+  height: 55px;
+  border: 1px solid #f0f0f0;
+  border-radius: 2px;
+  background: #f0f0f0;
+  outline: none;
+  font-weight: 600;
+  font-size: 18px;
+  }
+  
+  input:focus{
+      box-shadow: none;
+      background: transparent;
+      border: 1px solid rgb(209, 209, 209);
+  }
 
 
 label {
-    font-size: 15px;
-    color:#242424;
+   font-size: 15px;
+   color:#242424;
 }
 
 #wrapper {
-   width: 100%;
-   display: flex;
-   flex-direction: row;
-   margin-top: 30px;
- }
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.btn-link {
+   background: none !important;
+   color: var(--den) !important;
+   border: 3px solid var(--den) !important;
+}
+
+.btn-link:hover {
+  background: var(--den) !important;
+  color: white !important;
+  border: 3px solid var(--den) !important;
+}
 
 .flex-c-m {
-   display: -webkit-box;
-   display: -webkit-flex;
-   display: -moz-box;
-   display: -ms-flexbox;
-   display: flex;
-   justify-content: center;
-   -ms-align-items: center;
-   align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  -ms-align-items: center;
+  align-items: center;
 }
 
 .btn {
-   background: #242424;
-   border-radius: 0;
-   border: none;
-   outline: none;
-   color: white;
-   font-weight: bold;
-   display: inline-block;
-   padding-left: 20px;
-   padding-right: 20px;
-   height : 55px;
+  background: #242424;
+  border-radius: 0;
+  border: none;
+  outline: none;
+  color: white;
+  font-weight: bold;
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
+  height : 55px;
+  text-decoration: none;
 }
 
 .btn:hover {
- background: #d93a3a;
- transition: 0.1s;
+background: #d93a3a;
+transition: 0.1s;
 }
 
 p{
-   margin-bottom:2px;
-   font-size: 17px;
-   color: #999999;
-   margin-left: 10px;
+  margin-bottom:2px;
+  font-size: 17px;
+  color: #999999;
+  margin-left: 10px;
 }
 
 p a {
-   color: black;
-   text-decoration:none ;
+  color: black;
+  text-decoration:none ;
 }
 
 p a:hover { 
-   color: #d93a3a;
+  color: #d93a3a;
 }
 
 
