--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,6 +1,8 @@
  section {
-     padding-top: 20px;
-    margin-top: 20px;
+   display: flex;
+   flex-direction: row;
+   padding-top: 50px;
+   justify-content: center;
 
  }
 
@@ -13,10 +15,9 @@ padding-top: 0;
     margin: 0 auto;
 }
 
-@media (max-width:500px) {
+@media (max-width:700px) {
     .login-form {
-        width:470px;
-
+        width: 100%;
     }
 }
 
