--- a/frontend/src/app/signup/signup.component.css
+++ b/frontend/src/app/signup/signup.component.css
@@ -3,29 +3,29 @@ section {
    flex-direction: row;
    padding-top: 50px;
    justify-content: center;
+   padding-bottom: 100px;
 
  }
 
 .alert {
    text-align: right;
-   height: 30px;
+   height: 10px;
    border: none;
    background: transparent;
    border-radius: 0;
    padding-top: 5px;
    padding-right: 5px;
    font-weight: 600;
+   font-size: 14px;
 }
 
 
 .alert-danger {
    color: #d93a3a;
-   border-top: 3px solid #d93a3a;
 }
 
 .alert-success {
    color: yellowgreen;
-   border-top: 3px solid yellowgreen;
 }
 
 .login-form {
@@ -37,12 +37,11 @@ section {
    margin: 0 auto;
 }
 
-
-@media (max-width:700px) {
-   .login-form {
-       width: 100%;
-   }
+.headline {
+   margin-bottom: 35px; 
+font-weight: bolder;
 }
+
 
 .name {
     display: flex;
@@ -99,6 +98,13 @@ label {
    border: 3px solid var(--den) !important;
 }
 
+.btn-link:focus {
+   background: var(--den) !important;
+   color: white !important;
+   border: 3px solid var(--den) !important;
+   box-shadow: none !important;
+}
+
 .flex-c-m {
    display: -webkit-box;
    display: -webkit-flex;
@@ -129,6 +135,12 @@ label {
  transition: 0.1s;
 }
 
+.btn:focus {
+   background: #d93a3a;
+   transition: 0.1s;
+   box-shadow: none;
+  }
+
 p{
    margin-bottom:2px;
    font-size: 17px;
@@ -145,4 +157,27 @@ p a:hover {
    color: #d93a3a;
 }
 
+
+
+@media (max-width:700px) {
+   .login-form {
+       width: 100%;
+   }
+
+   #wrapper {
+      flex-direction: column-reverse;
+
+   }
+
+   .btn {
+      margin-bottom: 20px;
+   }
+
+   
+.headline {
+font-size: 30px;
+margin-bottom: 10px;
+margin-top: -25px;
+}
+}
 
