--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,7 +1,8 @@
 <section>
         <div class="login-form">
-        <h1 style="margin-bottom: 35px; font-weight: bolder;" class="text-center">Sign Up</h1>
+        <h1 class="headline text-center">Sign Up</h1>
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+
         <div class="form-group" >
             <label>Name</label>
             <input 
