--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -15,12 +15,6 @@ padding-top: 0;
     margin: 0 auto;
 }
 
-@media (max-width:700px) {
-    .login-form {
-        width: 100%;
-    }
-}
-
 .col {
     letter-spacing: 1px;
 }
@@ -51,7 +45,7 @@ input {
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-top: 50px;
+    margin-top: 30px;
   }
 
 .flex-c-m {
@@ -71,11 +65,17 @@ input {
     padding-left: 20px;
     padding-right: 20px;
     height : 55px;
+    box-shadow: none;
 }
 
 .btn:hover {
     background: #d93a3a ;
 }
+
+.btn:focus {
+    background: #d93a3a ;
+}
+
 
 p{
     margin-bottom:2px;
@@ -147,8 +147,39 @@ p a:hover {
     padding-right: 5px;
     font-weight: 600;
  }
+
+ .headline {
+    margin-bottom: 35px; 
+ font-weight: bolder;
+ }
  
+
  .alert-danger {
     color: #d93a3a;
-    border-top: 3px solid #d93a3a;
  }
+
+ 
+@media (max-width:700px) {
+    .login-form {
+        width: 100%;
+    }
+    
+ .headline {
+ font-size: 30px;
+ margin-bottom: 10px;
+ margin-top: -25px;
+ }
+
+ #wrapper {
+    flex-direction: column;
+  }
+
+  .col {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+  }
+ }
+ 
+ 
