--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -23,12 +23,6 @@ body::-webkit-scrollbar {
     width:16px
 }
 
-
-input {
-    border: none;
-    outline: none;
-}
-
 body::-webkit-scrollbar-track {
     background-color:#fff
 }
@@ -56,6 +50,19 @@ input[type=search]::-webkit-search-cancel-button {
     height: 16px;
     background-size: 20px;
     margin-bottom: 3px;
+}
+
+button:focus {
+    box-shadow: none !important;
+}
+
+.btn:focus {
+    box-shadow: none !important;
+}
+
+input {
+    border: none;
+    outline: none;
 }
   
 ul.breadcrumb {
