--- a/frontend/src/app/check-out/check-out.component.css
+++ b/frontend/src/app/check-out/check-out.component.css
@@ -202,6 +202,21 @@ p {
 
  @media (max-width:800px)
  {
+   .paym {
+     width: 100%;
+   }
+
+  .cuc1 {
+    margin-right: unset;
+  }
+  .cuc2 {
+    margin-left: unset;
+  }
+
+  .cut {
+    flex-direction: column;
+  }
+  
 
   .check-out {
     flex-direction: column-reverse;
@@ -211,5 +226,10 @@ p {
     margin-bottom: 50px;
   }
 
+  
+.r {
+  display: flex;
+  justify-content: space-between;
+}
 
  }
